# Energy_Demand_Forecast_App

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: model_v1.lgb  model_v1_config.json
data_engineering/: ingestion.py  run_ingestion.py
docs/: ADR.md  BOUNDED_CONTEXTS.md  BUSINESS_CASE.md  DEVLOG.md  REPO_STRUCTURE.md  business_case.md  devlog.md  project_plan.md  repo_structure.md
scripts/: run_ingestion.py
src/energy_forecast/: config.py  main.py  models.py
src/energy_forecast/data/: store.py
src/energy_forecast/features/: calendar.py  holiday.py  lag.py  pipeline.py  weather.py
src/energy_forecast/serving/: api.py  predict.py
terraform/: main.tf
tests/test_data_engineering/: test_ingestion.py
tests/test_features/: test_calendar.py  test_contract.py  test_features.py  test_holiday.py  test_weather.py
tests/test_serving/: test_api.py  test_predict.py  test_store.py
