[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-forecast"
version = "0.1.0"
description = "24h-ahead energy demand forecasting service for Spain"
requires-python = ">=3.11"
dependencies = [
    "lightgbm>=4.0.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=15.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "holidays>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "pytest-cov>=5.0.0",
    "duckdb>=0.10.0",
]

ingestion = [
    "duckdb>=0.10.0",
]

cloud = [
    "boto3>=1.34.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["energy_forecast*", "data_engineering*"]

# RUFF

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["N806"]  # Allow uppercase variables (ML convention: X, y)

[tool.ruff.format]
quote-style = "double"

# PYTEST

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"

# COVERAGE

[tool.coverage.run]
source = ["src"]
omit = [
    "src/energy_forecast/main.py"
]

# MYPY

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true



